--- a/client/src/containers/signup/SignupCTR.module.css
+++ b/client/src/containers/signup/SignupCTR.module.css
@@ -1,8 +1,9 @@
 *{
+   
     overflow: hidden;
 }
 .signupContainer{
-    position: absolute;
+    position: relative;
     height: 100vh;
     width: 100vw;
     background-color: aqua;
@@ -23,4 +24,7 @@
         height: 250vh;
         width: 100vw;
     }
+}
+.errorVisible {
+    visibility: visible;
 }
