--- a/client/src/containers/signup/SignupCTR.module.css
+++ b/client/src/containers/signup/SignupCTR.module.css
@@ -4,7 +4,7 @@
     position: relative;
     height: 100vh;
     width: 100vw;
-    background-color: aqua;
+    background-color: #00ffff;
     display: flex;
     justify-content: center;
     align-items: center;
